# osi-sensor-model-packaging

./: .gitignore  .gitmodules  .markdownlint.json  .travis.yml  LICENSE  README.md  osmp.xsd
.antora/: antora.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: antora-generator.yml  build.yaml  protobuf.yml  remote_release.yml
doc/: _config.adoc  description.rst  examples.rst  osi-sensor-model-packaging_spec.adoc  specification.rst
doc/misc/: example.adoc  idea_osmp.adoc  introduction.adoc
doc/setup/: build_install_example.adoc  building_examples.adoc  installing_dependencies.adoc
doc/spec/: basic_conventions.adoc  binary_variables.adoc  fmi_20.adoc  future_evolution.adoc  ground_truth_init_parameters.adoc  model_types.adoc  motion_request_inputs.adoc  motion_request_outputs.adoc  sensor_data_inputs.adoc  sensor_data_outputs.adoc  sensor_view_input_configuration.adoc  sensor_view_inputs.adoc  sensor_view_outputs.adoc  streaming_update_inputs.adoc  traffic_command_inputs.adoc  traffic_command_update_outputs.adoc  traffic_update_outputs.adoc
doc/use/: examples.adoc
examples/: CMakeLists.txt  CMakePresets.json  README.md
examples/Modules/: FindZeroMQ.cmake
examples/OSMPCNetworkProxy/: CMakeLists.txt  OSMPCNetworkProxy.c  OSMPCNetworkProxy.h  OSMPCNetworkProxyConfig.in.h  modelDescription.in.xml
examples/OSMPDummySensor/: CMakeLists.txt  OSMPDummySensor.cpp  OSMPDummySensor.h  OSMPDummySensorConfig.in.h  modelDescription.in.xml  modelDescription.xml
examples/OSMPDummySensor10/: CMakeLists.txt  OSMPDummySensor10.cpp  OSMPDummySensor10.h  modelDescription.xml
examples/OSMPDummySensor_flat/: CMakeLists.txt  OSMPDummySensor.cpp  OSMPDummySensor.h  modelDescription.in.xml
examples/OSMPDummySource/: CMakeLists.txt  OSMPDummySource.cpp  OSMPDummySource.h  modelDescription.in.xml
examples/OSMPDummySource_flat/: CMakeLists.txt  OSMPDummySource.cpp  OSMPDummySource.h
examples/OSMPNetworkProxy/: CMakeLists.txt  OSMPNetworkProxy.cpp  OSMPNetworkProxy.h  modelDescription-zmq.xml  modelDescription.xml
examples/OSMPNetworkProxyReceive/: CMakeLists.txt  OSMPNetworkProxyReceive.cpp  OSMPNetworkProxyReceive.h  modelDescription-zmq.xml  modelDescription.xml
examples/includes/: fmiFunctions.h
local_build_tools/: asciidoctor.bat  windows_convert_symlinks(ADMIN).bat
scripts/: timing_analyze.py
